--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "element-ui": "^2.12.0",
+    "eslint": "3.19.0",
+    "eslint-loader": "^2.1.2",
     "firebase": "^7.0.0",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
@@ -18,10 +20,10 @@
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.11.0",
-    "@vue/cli-plugin-eslint": "^3.11.0",
+    "@vue/cli-plugin-eslint": "^3.9.1",
     "@vue/cli-service": "^3.11.0",
     "babel-eslint": "^10.0.1",
-    "eslint": "^5.16.0",
+    "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-vue": "^5.0.0",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.1.0",
